[tool.poetry]
name = "supreme-courts"
version = "0.1.0"
description = ""
authors = ["Roy Rinberg <royrinberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
